--- a/photogallery.html
+++ b/photogallery.html
@@ -69,7 +69,7 @@
     		<button class="btn btn-outline-success my-2 my-sm-2" type="submit" onclick="searchPic()" href="images.html" style="box-shadow: 2px 2px 2px; font-family: Sriracha;">Search Image</button>
   			</form>
 
-			<h2 class="main_head2">"Capturing Most Precious Moments"</h2>
+			<h2 class="main_head2 d-none d-lg-block">"Capturing Most Precious Moments"</h2>
         </div>
     </section>
 
